# reffs

./: .clang-format  .clangd  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  COPYING  DOCKER_SANDBOX.md  Dockerfile  Dockerfile.ci  GEMINI.md  INSTALL  LICENSE-EXCEPTIONS.txt  LICENSE.md  Makefile.am  Makefile.ci  Makefile.precommit  Makefile.reffs  PJDFSTEST.md  README.md  SECURITY.md  VFS.md  check_license.sh  configure.ac  docker_sandbox.md  ec_benchmark_full_report.html  install-hooks.sh  install-pre-commit.sh  reffs-echo.service.in  reffs.pc.in  reffs.spec.in  reffsd.service.in  tree-build.sh
lib/: Makefile.am
lib/backends/: Makefile.am  client_persist.c  driver.c  flatfile_persist.c  posix.c  posix_data.c  proxy_data.c  ram.c  ram_data.c  rocksdb.c  rocksdb_keys.h  rocksdb_namespace.c  server_persist.c
lib/config/: Makefile.am  config.c
lib/config/tests/: Makefile.am  config_test.c
lib/ec/: Makefile.am  gf.c  gf.h  matrix.c  matrix.h  mirror.c  mojette.c  mojette.h  mojette_codec.c  mojette_encoding.c  rs.c  stripe.c
lib/ec/tests/: Makefile.am  gf_test.c  matrix_test.c  mirror_test.c  mojette_codec_test.c  mojette_encoding_test.c  mojette_test.c  rs_test.c
lib/fs/: Makefile.am  client.c  client_match.c  data_block.c  dirent.c  evictor.c  filehandle.c  fs.c  fuse.c  inode.c  layout_segment.c  lock.c  ns.c  sb_registry.c  stateid.c  super_block.c  vfs.c
lib/fs/tests/: .gitignore  Makefile.am  client_match_test.c  compose_test.c  dirent_lifecycle.c  fs_test_access.c  fs_test_chmod_chown.c  fs_test_create.c  fs_test_create_length.c  fs_test_evictor.c  fs_test_getattr.c  fs_test_harness.c  fs_test_harness.h  fs_test_listener_scoped.c  fs_test_lru.c  fs_test_mkdir.c  fs_test_mkdir_timestamps.c  fs_test_nlink_semantics.c  fs_test_ns_teardown.c  fs_test_owner_write.c  fs_test_permissions.c  fs_test_rename.c  fs_test_setattr_permissions.c  fs_test_unlink.c  fs_test_unlink_open.c  fs_test_utimensat.c  fs_test_vfs_ctime_capture.c  fs_test_vfs_unchecked_create.c  fs_test_write_read.c  fs_usage_posix.c  fs_usage_ram.c  fuse.c  fuse_1.c  fuse_2.c  fuse_3.c  fuse_4.c  fuse_5.c  fuse_6.c  fuse_7.c  fuse_8.c  (+41 more)
lib/include/: Makefile.am  reffs.h  workqueue-internal.h  workqueue.h
lib/include/reffs/: Makefile.am  backend.h  client.h  client_match.h  client_persist.h  cmp.h  coding_spec.h  context.h  darwin_rpc_compat.h  data_block.h  dirent.h  dstore.h  dstore_fanout.h  dstore_ops.h  ec.h  errno.h  evictor.h  filehandle.h  fs.h  fuse.h  gss_context.h  identity.h  identity_map.h  identity_types.h  idmap.h  inode.h  io.h  layout_segment.h  lock.h  log.h  memory.h  migration_persist.h  mount3.h  network.h  nfs3.h  nfs4.h  nfs4_stats.h  nlm.h  nlm_lock.h  ns.h  (+25 more)
lib/io/: Makefile.am  accept.c  backend.c  backend_darwin.c  backend_kqueue.c  conn_info.c  connect.c  context.c  handler.c  handlers.c  heartbeat.c  io_internal.h  kqueue_common.c  kqueue_common.h  kqueue_socket.c  lsnr.c  net_state.c  posix_shims.h  read.c  ring_internal.h  tls.c  tsan_io.h  tsan_uring.h  worker.c  write.c
lib/mds/: Makefile.am  dstore.c  dstore_fanout.c  dstore_ops.c  dstore_ops_local.c  dstore_ops_nfsv3.c  runway.c
lib/mount3/: Makefile.am  mount3.c  mount3_server.c
lib/nfs3/: Makefile.am  client.c  nfs3.c  nfs3.h  nfs3_server.c  server.c
lib/nfs4/: Makefile.am  attr.c  attr.h  cb.c  chunk.c  client.c  client_persist.c  compound.c  compound.h  copy.c  delegation.c  dir.c  dispatch.c  errors.c  errors.h  file.c  filehandle.c  layout.c  lock.c  nfs4_client.c  nfs4_client.h  nfs4_client_persist.c  nfs4_client_persist.h  nfs4_internal.h  nfs4_server.c  nfs4_stateid.c  nfs4_stateid.h  nfsv42_names.c  nfsv42_names.h  ops.c  ops.h  register.c  session.c  stateid.c  time_utils.h  xattr.c
lib/nlm/: Makefile.am  nlm.h  nlm_lock.c  nlm_server.c
lib/nsm/: Makefile.am  nsm_server.c
lib/probe1/: Makefile.am  probe1_client.c  probe1_server.c
lib/rpc/: Makefile.am  gss_context.c  gss_context.h  rpc.c
lib/scripts/: Makefile.am
lib/stat1/: Makefile.am  stat1_server.c
lib/stats/: Makefile.am
lib/tests/: Makefile.am  framework.md  libreffs_test.c  libreffs_test.h  mini_kdc.c  mini_kdc.h  mount.c  mount_test.h  nfsv3.c  nfsv3_test.h  rpc.c
lib/tls/: Makefile.am  tls_client.c
lib/trace/: Makefile.am  common.c
lib/utils/: Makefile.am  cmp.c  context.c  identity.c  identity_domain.c  identity_map.c  idmap.c  log.c  network.c  rcu.c  server.c  stack.c  trace.c  utf8string.c
lib/xdr/: .gitignore  Makefile.am  insert_pragmas.sh  insert_pragmas.sh.in  mntv3_xdr.x  nfsv3_xdr.x  nfsv42_xdr.x  nlm4_prot.x  nlm_prot.x  probe1_xdr.x  ref_cp_xdr.x  reffs_echo_xdr.x  rpc_xdr.x  sm_inter.x  stats1_xdr.x
scripts/: Makefile.am  _nfs_ctime_compare_inner.sh  bat_client_setup.sh  bat_export_setup.sh  bat_krb5_setup.sh  bat_setup.sh  bat_tls_setup.sh  capture_rename.sh  ci_cthon04_test.sh  ci_cthon26_test.sh  ci_integration_test.sh  ci_krb5_multiclient.sh  ci_libnfs.sh  ci_ltp.sh  ci_nfs_conformance_test.sh  ci_nfstest.sh  ci_pjdfstest.sh  ci_ps_soak_test.sh  ci_pynfs.sh  ci_remote.sh  ci_sigmund.sh  ci_soak_test.sh  ci_space_test.sh  ci_wardtest.sh  ci_xfstests.sh  copy_and_verify.sh.in  dstate_monitor.sh  ec_benchmark.sh  ec_benchmark_full.sh  ec_benchmark_shards.sh  ec_failure_modes_bitflip.sh  ec_repair_bench.sh  ec_write_hole.sh  gen_benchmark_report.py  gen_nfs42_names.py  gen_nfsv42_names.py  krb5_ffv1_stress.sh  local_ps_test.sh  local_soak.sh  macos-bootstrap.sh  (+14 more)
scripts/reffs/: .gitignore  Makefile.am  probe1_xdr_const.py  probe1_xdr_pack.py  probe1_xdr_type.py  probe_client.py.in  protocol_client.py.in
src/: .gitignore  Makefile.am  README.md  asan-suppressions.txt  asan_nfs3_server.sh  asan_reffsd.sh  echo.c  fuse.c  nfs3_server.c  probe1_client.c  recho_cl.c  recho_ev.c  reffs.c  reffs_fuse.c  reffs_registry_tool.c  reffsd.c
tools/: Makefile.am  ec_demo.c  er_demo.c  krb5_client_core.c  krb5_client_core.h  krb5_env.c  krb5_env.h  log_gap_finder.py  moj_bench.c  nfs_krb5_multiclient.c  nfs_krb5_test.c  nfs_tls_stress.c  nfs_tls_test.c  pre-commit.sh  tls_stress_test.sh
(+487 files in other folders)
